[tool.poetry]
name = "repl_python3_DnD-Discord-Assistant"
version = "0.1.0"
description = ""
authors = ["ZacharyYahn <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
replit = "^3.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
